# memoAgent

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: ci.yml
docs/: EXPERIMENT_REPORT.md  TECHNICAL_REPORT.md
docs/superpowers/plans/: 2026-05-16-memo-agent-plan.md  2026-05-18-experiment-execution.md  2026-05-18-frontend-fixes.md  2026-05-18-frontend-upgrade.md
docs/superpowers/specs/: 2026-05-16-memo-agent-design.md  2026-05-17-memo-agent-upgrade-design.md  2026-05-18-experiment-design.md  2026-05-18-frontend-upgrade-design.md
experiments/: config.py  generate_data.py  run_experiment1.py  run_experiment2.py  run_experiment3.py
experiments/results/: experiment1_results.json  experiment2_results.json  experiment3_results.json
frontend/: .eslintrc.json  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: CodeBlock.tsx  Header.tsx  Layout.tsx  MessageBubble.tsx  SettingsModal.tsx  Sidebar.tsx  StatusBar.tsx  ThemeToggle.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  index.ts
frontend/src/hooks/: useTheme.ts  useWebSocket.ts
frontend/src/pages/: ChatPage.tsx  KnowledgePage.tsx  MemoryPage.tsx  ReflectionPage.tsx
frontend/src/store/: useStore.ts
prd/: 产品需求文档 (PRD)：具备多级记忆与反思机制的终身学习学术 Agent.md
src/memo_agent/: cli.py  config.py  models.py  orchestrator.py
src/memo_agent/api/: __init__.py  app.py  deps.py  schemas.py
src/memo_agent/api/routes/: chat.py  knowledge.py  memory.py  reflection.py
src/memo_agent/core/: __init__.py  agent.py  llm_caller.py  session.py  system_prompt.py
src/memo_agent/memory/: __init__.py  episodic.py  semantic.py  working.py
src/memo_agent/reflection/: detector.py  kg_updater.py  reflector.py
src/memo_agent/retrieval/: context_assembler.py  entity_extractor.py
tests/: test_episodic.py  test_integration.py  test_models.py  test_reflection.py  test_retrieval.py  test_semantic.py  test_working.py
