[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memo-agent"
version = "0.2.0"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.3.0,<0.4.0",
    "langchain-anthropic>=0.3.0,<0.4.0",
    "langchain-openai>=0.3.0,<0.4.0",
    "chromadb>=0.5.0,<0.6.0",
    "networkx>=3.2,<4.0",
    "prompt-toolkit>=3.0,<4.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "fastapi>=0.110.0,<0.120.0",
    "uvicorn>=0.29.0,<0.31.0",
    "websockets>=12.0,<13.0",
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
    "httpx>=0.27.0,<0.28.0",
    "ruff>=0.4.0,<0.6.0",
    "mypy>=1.10.0,<2.0.0",
]

[project.scripts]
memo-agent = "memo_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unused_ignores = true
